--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Software Engineer | Professional Portfolio</title>
+    <title>Jeevaa-Software Engineer | Professional Portfolio</title>
     <meta name="description" content="John Doe - Fresher Software Engineer with expertise in React, JavaScript, and full-stack development. View my projects, skills, and professional experience." />
     <meta name="keywords" content="software engineer, web developer, React developer, JavaScript, portfolio, fresher, full-stack developer" />
-    <meta name="author" content="John Doe" />
+    <meta name="author" content="Jeevaa" />
 
-    <meta property="og:title" content="8cd8e572-2ee5-4925-8b9f-61935947e865" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%23217BF4'/%3E%3Ctext x='50' y='65' font-family='Arial,sans-serif' font-size='60' font-weight='bold' text-anchor='middle' fill='white'%3EJ%3C/text%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%23217BF4'/%3E%3Ctext x='50' y='65' font-family='Arial,sans-serif' font-size='60' font-weight='bold' text-anchor='middle' fill='white'%3EJ%3C/text%3E%3C/svg%3E" />
   </head>
 
   <body>
